Fixed bug where social icons did not change colour in dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,7 +574,6 @@ Udemy Course 'Modern Javascript: From Novice to Ninja' - Author: Shaun Pelling *
 
 .social i {
   font-size: 2em;
-  color: #353b3c;
   margin: 0 10px;
   transition-duration: 0.25s;
 }
